--- a/css/home.css
+++ b/css/home.css
@@ -60,3 +60,16 @@
 	justify-content:center;
 	align-items:center;
 }
+.window{
+	position:absolute;
+	width:800px;height:600px;
+	border-radius:25px;
+	background-color:#ffffffcc;
+	left:100px;top:50px;
+	backdrop-filter:blur(10px);
+}
+.appScreen{
+	width:100%;height:100%;
+	border-radius:25px;
+	border-width:0;
+}
