--- a/css/home.css
+++ b/css/home.css
@@ -67,6 +67,7 @@
 	background-color:#ffffffcc;
 	left:100px;top:50px;
 	backdrop-filter:blur(10px);
+	box-shadow: 0px 10px 20px 15px #00000055;
 }
 .appScreen{
 	width:100%;height:100%;
