--- a/css/home.css
+++ b/css/home.css
@@ -95,3 +95,25 @@
 	left:30px;top:0px;
 	font-size:15px;
 	z-index:0;
+}
+.windowMenu{
+	background-color:#ffffffcc;
+	position:absolute;
+	left:200px;top:15px;
+	height:40px;width:200px;
+	border-radius:20px;
+	backdrop-filter:blur(10px);
+	box-shadow: 0px 1px 20px 1px #00000055;
+}
+.winMenuB{
+	background-color:#ffffff00;
+	position:absolute;
+	left:0;top:0;
+	width:40px;height:40px;
+	border-width:0;
+	border-radius:20px;
+	transition:.5s;
+}
+.winMenuB:hover{
+	background-color:#44444422;
+}
