--- a/css/home.css
+++ b/css/home.css
@@ -117,3 +117,66 @@
 .winMenuB:hover{
 	background-color:#44444422;
 }
+.controlCenter{
+	position:absolute;
+	top:30px;right:10px;
+	width:500px;height:700px;
+	background-color:#ffffffcc;
+	backdrop-filter:blur(10px);
+	border-radius:25px;
+	padding:10px;
+}
+.wifiBox{
+	position:relative;
+	left:0px;top:0px;
+	background-color:#ffffffcc;
+	width:245px;height:70px;
+	border-radius:25px;
+}
+.wifiToggle{
+	width:50px;height:50px;
+	position:absolute;
+	left:10px;top:10px;
+	border-radius:25px;
+	border-width:0px;
+	background-color:#55555599;
+	color:white;
+}
+.wifiLabel{
+	position:absolute;
+	left:70px;top:5px;
+	font-weight:bold;
+	font-size:15px;
+}
+.wifiLabelSub{
+	position:absolute;
+	left:70px;top:25px;
+	font-size:15px;
+}
+.btBox{
+	position:absolute;
+	right:10px;top:10px;
+	background-color:#ffffffcc;
+	width:245px;height:70px;
+	border-radius:25px;
+}
+.btToggle{
+	width:50px;height:50px;
+	position:absolute;
+	left:10px;top:10px;
+	border-radius:25px;
+	border-width:0px;
+	background-color:#55555599;
+	color:white;
+}
+.btLabel{
+	position:absolute;
+	left:70px;top:5px;
+	font-weight:bold;
+	font-size:15px;
+}
+.btLabelSub{
+	position:absolute;
+	left:70px;top:25px;
+	font-size:15px;
+}
