--- a/css/home.css
+++ b/css/home.css
@@ -59,6 +59,7 @@
 	display:flex;
 	justify-content:center;
 	align-items:center;
+	box-shadow: 0px 1px 20px 1px #00000055;
 }
 .window{
 	position:absolute;
@@ -119,19 +120,21 @@
 }
 .controlCenter{
 	position:absolute;
-	top:35px;right:10px;
+	top:50px;right:10px;
 	width:500px;height:700px;
-	background-color:#ffffffcc;
-	backdrop-filter:blur(10px);
+	background-color:#ffffff55;
+	backdrop-filter:blur(50px);
 	border-radius:25px;
 	padding:10px;
+	box-shadow: 0px 1px 20px 1px #00000055;
 }
 .wifiBox{
 	position:relative;
 	left:0px;top:0px;
-	background-color:#ffffffcc;
+	background-color:#ffffffaa;
 	width:245px;height:70px;
 	border-radius:25px;
+	box-shadow: 0px 1px 20px 1px #00000055;
 }
 .wifiToggle{
 	width:50px;height:50px;
@@ -139,7 +142,7 @@
 	left:10px;top:10px;
 	border-radius:25px;
 	border-width:0px;
-	background-color:#55555599;
+	background-color:#367cffff;
 	color:white;
 }
 .wifiLabel{
@@ -156,9 +159,10 @@
 .btBox{
 	position:absolute;
 	right:10px;top:10px;
-	background-color:#ffffffcc;
+	background-color:#ffffffaa;
 	width:245px;height:70px;
 	border-radius:25px;
+	box-shadow: 0px 1px 20px 1px #00000055;
 }
 .btToggle{
 	width:50px;height:50px;
@@ -166,8 +170,8 @@
 	left:10px;top:10px;
 	border-radius:25px;
 	border-width:0px;
-	background-color:#55555599;
-	color:white;
+	background-color:#55555533;
+	color:black;
 }
 .btLabel{
 	position:absolute;
@@ -179,4 +183,11 @@
 	position:absolute;
 	left:70px;top:25px;
 	font-size:15px;
+}
+.statusbar{
+	background-color:#ffffff55;
+	backdrop-filter:blur(50px);
+	position:absolute;
+	left:0;top:0;
+	width:100%;height:40px;
 }
