--- a/css/home.css
+++ b/css/home.css
@@ -3,6 +3,16 @@
 	src:url("../fonts/NotoSansKR-VariableFont_wght.ttf") format("truetype");
 }
 
+@keyframes closeCtrlPan{
+	from{top:50px;}
+	to{top:0;}
+}
+@keyframes openCtrlPan{
+	from{top:0;}
+	to{top:50px;}
+}
+
+
 .background{
 	background-image:url("../data/wallpaper.jpg");
 	background-repeat:no-repeat;
@@ -93,9 +103,16 @@
 }
 .datetime{
 	position:absolute;
-	left:30px;top:0px;
+	right:30px;top:0px;
+	height:40px;
 	font-size:15px;
 	z-index:0;
+	border-width:0;
+	background-color:#ffffff00;
+	transition:.5s;
+}
+.datetime:hover{
+	background-color:#eeeeee66;
 }
 .windowMenu{
 	background-color:#ffffffcc;
@@ -127,6 +144,10 @@
 	border-radius:25px;
 	padding:10px;
 	box-shadow: 0px 1px 20px 1px #00000055;
+	transition:.5s;
+	animation-duration:.5s;
+	display:none;
+	z-index:3;
 }
 .wifiBox{
 	position:relative;
@@ -190,4 +211,5 @@
 	position:absolute;
 	left:0;top:0;
 	width:100%;height:40px;
+	z-index:1;
 }
