--- a/css/home.css
+++ b/css/home.css
@@ -4,12 +4,12 @@
 }
 
 @keyframes closeCtrlPan{
-	from{top:50px;}
-	to{top:0;}
+	from{top:50px;width:500px;height:700px;}
+	to{top:0;width:0;height:0;}
 }
 @keyframes openCtrlPan{
-	from{top:0;}
-	to{top:50px;}
+	from{top:0;width:0;height:0;}
+	to{top:50px;width:500;height:700;}
 }
 
 
@@ -146,7 +146,7 @@
 	box-shadow: 0px 1px 20px 1px #00000055;
 	transition:.5s;
 	animation-duration:.5s;
-	display:none;
+	transform-origin:top right;
 	z-index:3;
 }
 .wifiBox{
