--- a/css/home.css
+++ b/css/home.css
@@ -13,15 +13,6 @@
 }
 
 
-.background{
-	background-image:url("../data/wallpaper.jpg");
-	background-repeat:no-repeat;
-	background-attachment:fixed;
-	background-position:center;
-	background-size:cover;
-	line-height:50%;
-	font-family:"Noto Sans KR";
-}
 .mainPanel{
 	position:absolute;
 	top:0;left:0;right:0;bottom:150px;
@@ -57,20 +48,6 @@
 	font-size:20px;
 	margin:0px;
 }
-.dockPanel{
-	position:absolute;
-	left:30%;right:30%;
-	bottom:15px;
-	background-color:#ffffffcc;
-	height:100px;
-	padding:20px;
-	backdrop-filter:blur(20px);
-	border-radius:25px;
-	display:flex;
-	justify-content:center;
-	align-items:center;
-	box-shadow: 0px 1px 20px 1px #00000055;
-}
 .window{
 	position:absolute;
 	width:800px;height:600px;
@@ -100,19 +77,6 @@
 }
 .windowMenuButton:hover{
 	background-color:#ddddddcc;
-}
-.datetime{
-	position:absolute;
-	right:30px;top:0px;
-	height:40px;
-	font-size:15px;
-	z-index:0;
-	border-width:0;
-	background-color:#ffffff00;
-	transition:.5s;
-}
-.datetime:hover{
-	background-color:#eeeeee66;
 }
 .windowMenu{
 	background-color:#ffffffcc;
@@ -146,7 +110,7 @@
 	box-shadow: 0px 1px 20px 1px #00000055;
 	transition:.5s;
 	animation-duration:.5s;
-	transform-origin:top right;
+	transform-origin:400px -20px;;
 	z-index:3;
 }
 .wifiBox{
@@ -204,12 +168,4 @@
 	position:absolute;
 	left:70px;top:25px;
 	font-size:15px;
-}
-.statusbar{
-	background-color:#ffffff55;
-	backdrop-filter:blur(50px);
-	position:absolute;
-	left:0;top:0;
-	width:100%;height:40px;
-	z-index:1;
 }
