--- a/css/window.css
+++ b/css/window.css
@@ -1,11 +1,16 @@
 @font-face{                                                     font-family:"Noto Sans KR";                             src:url("../fonts/NotoSansKR-VariableFont_wght.ttf") format("truetype");
 }
 
-.background{
-	background-color:#ffffff00;
-	color:black;
-	line-height:50%;
-	font-family:"Noto Sans KR";
-	padding:8px;
-	padding-top:60px;
+
+.winCtrlImg{
+	width:14px;height:14px;
+}
+.closeW{
+	border-width:0;
+	width:20px;height:20px;
+	border-radius:10px;
+	padding:3px;
+	background-color:tomato;
+	position:absolute;
+	left:15px;top:15px;
 }
