--- a/css/window.css
+++ b/css/window.css
@@ -1,16 +1,28 @@
 @font-face{                                                     font-family:"Noto Sans KR";                             src:url("../fonts/NotoSansKR-VariableFont_wght.ttf") format("truetype");
 }
 
-
-.winCtrlImg{
-	width:14px;height:14px;
+.windowCtrlImg{
+	width:18px;height:18px;
 }
-.closeW{
-	border-width:0;
-	width:20px;height:20px;
-	border-radius:10px;
-	padding:3px;
-	background-color:tomato;
+
+.windowControlBox{
+	background-color:#ffffff66;
+	backdrop-filter:blur(50px);
 	position:absolute;
-	left:15px;top:15px;
+	left:300px;top:10px;
+	width:300px;height:220px;
+	border-radius:25px;
+}
+.windowMax{
+	position:relative;
+	top:0;left:0;
+	width:100%;height:50px;
+	background-color:#ffffff00;
+	border-width:0;
+	border-top-left-radius:25px;
+	border-top-right-radius:25px;
+	transition:.25s;
+}
+.windowMax:hover{
+	background-color:#ddddddaa;
 }
