--- a/css/window.css
+++ b/css/window.css
@@ -2,7 +2,22 @@
 }
 
 .windowCtrlImg{
-	width:18px;height:18px;
+	width:32px;height:32px;
+	position:absolute;
+	top:9px;right:24px;
+}
+.windowCtrlText{
+	text-align:left;
+	font-size:20px;
+	line-height:0%;
+	margin-left:48px;
+}
+.windowCloseText{
+	text-align:left;
+	font-size:20px;
+	line-height:0%;
+	margin-left:48px;
+	color:#ed594e;
 }
 
 .windowControlBox{
@@ -10,9 +25,10 @@
 	backdrop-filter:blur(50px);
 	position:absolute;
 	left:300px;top:10px;
-	width:300px;height:220px;
+	width:300px;height:210px;
 	border-radius:25px;
 }
+
 .windowMax{
 	position:relative;
 	top:0;left:0;
@@ -24,5 +40,40 @@
 	transition:.25s;
 }
 .windowMax:hover{
+	background-color:#ddddddaa;
+}
+.windowAdd{
+	position:relative;
+	top:0;left:0;
+	width:100%;height:50px;
+	background-color:#ffffff00;
+	border-width:0;
+	transition:.25s;
+}
+.windowAdd:hover{
+	background-color:#ddddddaa;
+}
+.windowMin{
+	position:relative;
+	top:0;left:0;
+	width:100%;height:50px;
+	background-color:#ffffff00;
+	border-width:0;
+	transition:.25s;
+}
+.windowMin:hover{
+	background-color:#ddddddaa;
+}
+.windowClose{
+	position:absolute;
+	bottom:0;left:0;
+	width:100%;height:50px;
+	background-color:#ffffff00;
+	border-width:0;
+	border-bottom-left-radius:25px;
+	border-bottom-right-radius:25px;
+	transition:.25s;
+}
+.windowClose:hover{
 	background-color:#ddddddaa;
 }
